--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <button type="submit" class="btn-primary">search</button>
           </form>
           <div class="search-div">
-            <img src="./img/search.svg" alt="" data-search="" />
+            <img width="24px" height="24px" src="./img/search.svg" alt="" data-search=""/>
+            <img width="24px" height="24px" src="./img/close.svg"  alt="" data-close=""  class="d-n"/>
           </div>
         </div>
       </header>
