--- a/index.html
+++ b/index.html
@@ -29,6 +29,27 @@
             <img width="24px" height="24px" src="./img/close.svg"  alt="" data-close=""  class="d-n"/>
           </div>
         </div>
+        <form data-form3="">
+          <select data-select name="" id="">
+            <option value="Grass">Grass</option>
+            <option value="Poison">Poison</option>
+            <option value="Fire">Fire</option>
+            <option value="Flying">Flying</option>
+            <option value="Water">Water</option>
+            <option value="Bug">Bug</option>
+            <option value="Normal">Normal</option>
+            <option value="Electric">Electric</option>
+            <option value="Ground">Ground</option>
+            <option value="Fighting">Fighting</option>
+            <option value="Psychic">Psychic</option>
+            <option value="Rock">Rock</option>
+            <option value="Ice">Ice</option>
+            <option value="Ghost">Ghost</option>
+            <option value="Dragon">Dragon</option>
+          </select>
+          <button type="submit" class="btn-primary">search with type</button>
+        </form>
+    
       </header>
       <main>
         <form data-form>
@@ -79,27 +100,7 @@
         </div>
       </li>
     </template>
-    <!-- <form data-form3="">
-      <select data-select name="" id="">
-        <option value="Grass">Grass</option>
-        <option value="Poison">Poison</option>
-        <option value="Fire">Fire</option>
-        <option value="Flying">Flying</option>
-        <option value="Water">Water</option>
-        <option value="Bug">Bug</option>
-        <option value="Normal">Normal</option>
-        <option value="Electric">Electric</option>
-        <option value="Ground">Ground</option>
-        <option value="Fighting">Fighting</option>
-        <option value="Psychic">Psychic</option>
-        <option value="Rock">Rock</option>
-        <option value="Ice">Ice</option>
-        <option value="Ghost">Ghost</option>
-        <option value="Dragon">Dragon</option>
-      </select>
-      <button type="submit" class="btn-primary">search with type</button>
-    </form>  -->
-
+    
     <script src="./js/pokedex.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/search.js"></script>
