change and input

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="website icon" type="svg" href="./img/pokemon_logo 1.svg" />
   </head>
   <body>
+    
     <div class="container">
       <header data-header>
         <div class="logo-div">
@@ -61,7 +62,7 @@
               </g>
             </svg>
             <input type="search" data-input5="" />
-            <button type="submit" class="btn-primary">search</button>
+            <!-- <button type="submit" class="btn-primary">search</button> -->
           </form>
           <div class="search-div">
             <img
@@ -125,7 +126,6 @@
             <option value="Ghost">Ghost</option>
             <option value="Dragon">Dragon</option>
           </select>
-          <button type="submit" class="btn-primary">search type</button>
         </form>
         <form data-form-weaknesses="">
           <select data-select-weaknesses>
@@ -148,7 +148,6 @@
             <option value="Steel">Steel</option>
             <option value="Dragon">Dragon</option>
           </select>
-          <button type="submit" class="btn-primary">search weaknesses</button>
         </form>
 
         <ul data-ul=""></ul>
