--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         </form>
         <form data-form3="">
           <select data-select name="" id="">
-            <option value="all">All</option>
+             <option value="type"> All Types <!-- pokemons --></option>
+            <!-- <option value="all">All</option> -->
             <option value="Grass">Grass</option>
             <option value="Poison">Poison</option>
             <option value="Fire">Fire</option>
@@ -129,7 +130,9 @@
         </form>
         <form data-form-weaknesses="">
           <select data-select-weaknesses>
-            <option value="all">All</option>
+            
+            <option value="weaknesses">Weaknesses</option>
+            <!-- <option value="all">All</option> -->
             <option value="Fire">Fire</option>
             <option value="Ice">Ice</option>
             <option value="Flying">Flying</option>
