change and input events

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="website icon" type="svg" href="./img/pokemon_logo 1.svg" />
   </head>
-  <body>
+  <body id="top">
     <!-- required bootstrap js -->
     <!-- <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
       <div class="container">
@@ -220,6 +220,11 @@
         </div>
         <ul data-ul=""></ul>
       </main>
+    </div>
+    <div class="up-div">
+      <a id="up" href="#top">
+        ⏭
+      </a>
     </div>
     <template>
       <li class="elli">
