--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div data-container class="container">
       <header data-header>
         <div class="logo-div">
-          <a href="./index.html">
+          <a href="pokemon-nodirbek0105.netlify.app">
             <h1>
               <img src="./img/pokemon_logo 1.svg" alt="" />
             </h1>
@@ -170,12 +170,13 @@
               <input data-input6 placeholder="Weaknesses" />
             </div>
             <div>
-              <input data-input3 placeholder="Weight" />
+              <input type="number" data-input3 placeholder="Weight" />
             </div>
             <div>
-              <input data-input4 placeholder="Height" />
+              <input type="number" data-input4 placeholder="Height" />
             </div>
             <button type="submit" class="btn-primary">add new pokemon</button>
+            <button type="reset" class="btn-primary">clearing values</button>
           </div>
         </form>
         <div class="filter">
@@ -223,7 +224,7 @@
     </div>
     <div class="up-div">
       <a id="up" href="#top">
-        ⏭
+        <img src="./img/arrow_upward_FILL0_wght400_GRAD0_opsz48 (1).svg" alt="">
       </a>
     </div>
     <template>
