--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div data-container class="container">
       <header data-header>
         <div class="logo-div">
-          <a href="pokemon-nodirbek0105.netlify.app">
+          <a href="https://pokemon-nodirbek0105.netlify.app">
             <h1>
               <img src="./img/pokemon_logo 1.svg" alt="" />
             </h1>
