--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
             <option value="Dragon">Dragon</option>
           </select>         
         </div>
+        <div class="sort">
+          <select data-select-sort name="" id="">
+            <option value="az">A-Z</option>
+            <option value="za">Z-A</option>
+            <option value="wu">WEIGHT UP</option>
+            <option value="wd">WEIGHT DOWN</option>
+            <option value="hu">HEIGHT UP</option>
+            <option value="hd">HEIGHT DOWN</option>
+          </select>
+        </div>
         <ul data-ul=""></ul>
       </main>
     </div>
