--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pokemon</title>
     <link rel="stylesheet" href="./css/bootstrapt.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/my.css" />
     <link rel="website icon" type="svg" href="./img/pokemon_logo 1.svg" />
   </head>
   <body id="top">
