--- a/index.html
+++ b/index.html
@@ -22,65 +22,102 @@
         </div>
         <div class="parent">
           <form data-form2>
-            <label for="search">
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="Icon/Outline/search">
+            <label for="search"><svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="Icon/Outline/search">
+                <path
+                  id="Mask"
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M5 11C5 7.691 7.691 5 11 5C14.309 5 17 7.691 17 11C17 14.309 14.309 17 11 17C7.691 17 5 14.309 5 11ZM20.707 19.293L17.312 15.897C18.365 14.543 19 12.846 19 11C19 6.589 15.411 3 11 3C6.589 3 3 6.589 3 11C3 15.411 6.589 19 11 19C12.846 19 14.543 18.365 15.897 17.312L19.293 20.707C19.488 20.902 19.744 21 20 21C20.256 21 20.512 20.902 20.707 20.707C21.098 20.316 21.098 19.684 20.707 19.293Z"
+                  fill="gray"
+                />
+                <mask
+                  id="mask0_1_25"
+                  style="mask-type: alpha"
+                  maskUnits="userSpaceOnUse"
+                  x="3"
+                  y="3"
+                  width="19"
+                  height="18"
+                >
                   <path
-                    id="Mask"
+                    id="Mask_2"
                     fill-rule="evenodd"
                     clip-rule="evenodd"
                     d="M5 11C5 7.691 7.691 5 11 5C14.309 5 17 7.691 17 11C17 14.309 14.309 17 11 17C7.691 17 5 14.309 5 11ZM20.707 19.293L17.312 15.897C18.365 14.543 19 12.846 19 11C19 6.589 15.411 3 11 3C6.589 3 3 6.589 3 11C3 15.411 6.589 19 11 19C12.846 19 14.543 18.365 15.897 17.312L19.293 20.707C19.488 20.902 19.744 21 20 21C20.256 21 20.512 20.902 20.707 20.707C21.098 20.316 21.098 19.684 20.707 19.293Z"
-                    fill="gray"
+                    fill="white"
                   />
-                  <mask
-                    id="mask0_1_25"
-                    style="mask-type: alpha"
-                    maskUnits="userSpaceOnUse"
-                    x="3"
-                    y="3"
-                    width="19"
-                    height="18"
-                  >
-                    <path
-                      id="Mask_2"
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M5 11C5 7.691 7.691 5 11 5C14.309 5 17 7.691 17 11C17 14.309 14.309 17 11 17C7.691 17 5 14.309 5 11ZM20.707 19.293L17.312 15.897C18.365 14.543 19 12.846 19 11C19 6.589 15.411 3 11 3C6.589 3 3 6.589 3 11C3 15.411 6.589 19 11 19C12.846 19 14.543 18.365 15.897 17.312L19.293 20.707C19.488 20.902 19.744 21 20 21C20.256 21 20.512 20.902 20.707 20.707C21.098 20.316 21.098 19.684 20.707 19.293Z"
-                      fill="white"
-                    />
-                  </mask>
-                  <g mask="url(#mask0_1_25)">
-                    <g id="&#240;&#159;&#142;&#168; Color">
-                      <rect id="Base" width="24" height="24" fill="#aaa" />
-                    </g>
+                </mask>
+                <g mask="url(#mask0_1_25)">
+                  <g id="&#240;&#159;&#142;&#168; Color">
+                    <rect id="Base" width="24" height="24" fill="currentColor" />
                   </g>
                 </g>
-              </svg>
+              </g>
+            </svg>
             </label>
-            <input id="search" type="search" data-input5="" />
+            <input id="search" type="search" placeholder="search" data-input5="" />
           </form>
           <div class="search-div">
-            <img
-              width="24px"
-              height="24px"
-              src="./img/search.svg"
-              alt=""
+            <svg
               data-search=""
-            />
-            <img
-              width="24px"
-              height="24px"
-              src="./img/close.svg"
-              alt=""
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="Icon/Outline/search">
+                <path
+                  id="Mask"
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M5 11C5 7.691 7.691 5 11 5C14.309 5 17 7.691 17 11C17 14.309 14.309 17 11 17C7.691 17 5 14.309 5 11ZM20.707 19.293L17.312 15.897C18.365 14.543 19 12.846 19 11C19 6.589 15.411 3 11 3C6.589 3 3 6.589 3 11C3 15.411 6.589 19 11 19C12.846 19 14.543 18.365 15.897 17.312L19.293 20.707C19.488 20.902 19.744 21 20 21C20.256 21 20.512 20.902 20.707 20.707C21.098 20.316 21.098 19.684 20.707 19.293Z"
+                  fill="currentColor"
+                />
+                <mask
+                  id="mask0_1_25"
+                  style="mask-type: alpha"
+                  maskUnits="userSpaceOnUse"
+                  x="3"
+                  y="3"
+                  width="19"
+                  height="18"
+                >
+                  <path
+                    id="Mask_2"
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M5 11C5 7.691 7.691 5 11 5C14.309 5 17 7.691 17 11C17 14.309 14.309 17 11 17C7.691 17 5 14.309 5 11ZM20.707 19.293L17.312 15.897C18.365 14.543 19 12.846 19 11C19 6.589 15.411 3 11 3C6.589 3 3 6.589 3 11C3 15.411 6.589 19 11 19C12.846 19 14.543 18.365 15.897 17.312L19.293 20.707C19.488 20.902 19.744 21 20 21C20.256 21 20.512 20.902 20.707 20.707C21.098 20.316 21.098 19.684 20.707 19.293Z"
+                    fill="white"
+                  />
+                </mask>
+                <g mask="url(#mask0_1_25)">
+                  <g id="&#240;&#159;&#142;&#168; Color">
+                    <rect id="Base" width="24" height="24" fill="transparent" />
+                  </g>
+                </g>
+              </g>
+            </svg>
+            <svg
+              width="48"
+              height="48"
+              xmlns="http://www.w3.org/2000/svg"
+              style="transform: scale(0.5)"
               data-close=""
               class="d-n"
-            />
+            >
+              <path
+                d="m12.45 37.65-2.1-2.1L21.9 24 10.35 12.45l2.1-2.1L24 21.9l11.55-11.55 2.1 2.1L26.1 24l11.55 11.55-2.1 2.1L24 26.1Z"
+                fill="currentColor"
+              />
+            </svg>
           </div>
         </div>
       </header>
@@ -164,8 +201,11 @@
     </div>
     <div class="up-div">
       <a id="up" href="#top">
-        <img src="./img/arrow_upward_FILL0_wght400_GRAD0_opsz48 (1).svg" alt="">
+        <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path d="M22.5 40V13.7L10.1 26.1 8 24 24 8l16 16-2.1 2.1-12.4-12.4V40Z" fill="currentColor"/></svg>
       </a>
+    </div>
+    <div data-dark-mode class="dark-div">
+        mode
     </div>
     <template>
       <li class="elli">
@@ -184,8 +224,15 @@
               <p class="height"></p>
             </div>
           </div>
-          <div class="divRight">
-            <img data-delete src="./img/trash.svg" alt="" />
+          <div class="divRight"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M22.5 23.75C22.5 24.4387 21.94 25 21.25 25H8.75C8.06 25 7.5 24.4387 7.5 23.75V10H22.5V23.75ZM12.5 5.41C12.5 5.21625 12.7675 5 13.125 5H16.875C17.2325 5 17.5 5.21625 17.5 5.41V7.5H12.5V5.41ZM26.25 7.5H25H20V5.41C20 3.805 18.5987 2.5 16.875 2.5H13.125C11.4012 2.5 10 3.805 10 5.41V7.5H5H3.75C3.0625 7.5 2.5 8.0625 2.5 8.75C2.5 9.4375 3.0625 10 3.75 10H5V23.75C5 25.8175 6.6825 27.5 8.75 27.5H21.25C23.3175 27.5 25 25.8175 25 23.75V10H26.25C26.9375 10 27.5 9.4375 27.5 8.75C27.5 8.0625 26.9375 7.5 26.25 7.5Z" fill="black"/>
+            <mask id="mask0_1_481" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="26" height="26">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M22.5 23.75C22.5 24.4387 21.94 25 21.25 25H8.75C8.06 25 7.5 24.4387 7.5 23.75V10H22.5V23.75ZM12.5 5.41C12.5 5.21625 12.7675 5 13.125 5H16.875C17.2325 5 17.5 5.21625 17.5 5.41V7.5H12.5V5.41ZM26.25 7.5H25H20V5.41C20 3.805 18.5987 2.5 16.875 2.5H13.125C11.4012 2.5 10 3.805 10 5.41V7.5H5H3.75C3.0625 7.5 2.5 8.0625 2.5 8.75C2.5 9.4375 3.0625 10 3.75 10H5V23.75C5 25.8175 6.6825 27.5 8.75 27.5H21.25C23.3175 27.5 25 25.8175 25 23.75V10H26.25C26.9375 10 27.5 9.4375 27.5 8.75C27.5 8.0625 26.9375 7.5 26.25 7.5Z" fill="white"/>
+            </mask>
+            <g mask="url(#mask0_1_481)">
+            <rect width="30" height="30" fill="currentColor"/>
+            </g>
+            </svg>
           </div>
         </div>
       </li>
