escape edit theme

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </svg>
       </a>
     </span>
-    <div data-light-mode class="light-div">
+    <div data-light-mode class="light-div right-nol">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         height="48"
@@ -238,7 +238,7 @@
         />
       </svg>
     </div>
-    <div data-dark-mode class="dark-div">
+    <div data-dark-mode class="dark-div right-yuz">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         height="48"
