--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       <header data-header>
         <div class="logo-div">
           <a href="https://pokemon-nodirbek0105.netlify.app">
-            <h1>
-              <img src="./img/pokemon_logo 1.svg" alt="" />
-            </h1>
+            <h1><img src="./img/pokemon_logo 1.svg" alt="" /></h1>
           </a>
         </div>
         <div class="parent">
@@ -133,29 +131,15 @@
         </div>
       </header>
       <main>
-        <div data-add>
-          +
-        </div>
+        <div data-add>+</div>
         <form data-form>
           <div class="parent">
-            <div>
-              <input data-input placeholder="Image URL" />
-            </div>
-            <div>
-              <input required data-input1 placeholder="Name" />
-            </div>
-            <div>
-              <input data-input2 placeholder="Type" />
-            </div>
-            <div>
-              <input data-input6 placeholder="Weaknesses" />
-            </div>
-            <div>
-              <input type="number" data-input3 placeholder="Weight" />
-            </div>
-            <div>
-              <input type="number" data-input4 placeholder="Height" />
-            </div>
+            <div><input data-input placeholder="Image URL" /></div>
+            <div><input required data-input1 placeholder="Name" /></div>
+            <div><input data-input2 placeholder="Type" /></div>
+            <div><input data-input6 placeholder="Weaknesses" /></div>
+            <div><input type="number" data-input3 placeholder="Weight" /></div>
+            <div><input type="text" data-input4 placeholder="Height" /></div>
             <button type="submit" class="btn-danger">add new pokemon</button>
             <button type="reset" data-clear class="btn-danger">
               clearing values
@@ -282,27 +266,7 @@
               <path
                 d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
               />
-            </svg>
-            <svg
-              class="d-n"
-              data-star
-              xmlns="http://www.w3.org/2000/svg"
-              enable-background="new 0 0 24 24"
-              height="24px"
-              viewBox="0 0 24 24"
-              width="24px"
-              fill="currentColor"
-            >
-              <g>
-                <path d="M0 0h24v24H0V0z" fill="none" />
-                <path d="M0 0h24v24H0V0z" fill="none" />
-              </g>
-              <g>
-                <path
-                  d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27z"
-                />
-              </g>
-            </svg>
+            </svg><!-- <svg class="d-n" data-star xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"> <g> <path d="M0 0h24v24H0V0z" fill="none" /> <path d="M0 0h24v24H0V0z" fill="none" /> </g> <g> <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27z" /> </g> </svg> -->
           </div>
         </div>
       </li>
